# prism-mcp-rs

./: .actrc  .aicontext  .gitignore  .rustfmt.ignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  LICENSE  MIGRATION.md  Makefile  PROJECT_STRUCTURE.md  README.md  build.rs  clippy.toml  codecov.yml  deny.toml  rustfmt.toml
.github/workflows/: benchmarks.yml  ci-local.yml  ci.yml  dependencies.yml  release.yml  security.yml
benches/: client_benchmarks.rs  plugin_benchmarks.rs  server_benchmarks.rs
docs/: ACT_GUIDE.md  PLUGIN_GUIDE.md  PLUGIN_TYPES.md  api-reference.md
docs/api/: README.md  client.md  core.md  plugin.md  prelude.md  protocol.md  server.md  transport.md
docs/ci/: LOGGING_GUIDE.md
docs/internal/: DOCUMENTATION_FIXES_COMPLETE.md  STYLE_GUIDE.md
examples/: README.md  advanced_2025_features.rs  advanced_features_showcase.rs  bidirectional_communication_demo.rs  convenience_methods_demo.rs  performance_benchmarks.rs  production_error_handling_demo.rs  streaming_http2_showcase.rs  streaming_http_showcase.rs  transport_selection_guide.rs
examples/client/: README.md  advanced_http_client.rs  conservative_http_demo.rs  http_client.rs  websocket_client.rs
examples/server/: README.md  enhanced_echo_server.rs  http2_server.rs  http_server.rs  websocket_server.rs
examples/utilities/: README.md  transport_benchmark.rs
plugins/: calculator.dylib
reports/: CI_REPORTING_SETUP.md  README.md
scripts/: README.md  build-docs.sh  generate-docs.sh  pre-push
scripts/ci/: README.md  ci-check.sh  generate-coverage-report.sh  install-ci-tools.sh  integration_test.sh  local-ci-enhanced.sh  local-ci-full.sh  local-ci.sh  pre-push  run-benchmarks.sh  run_ci_local.sh  simple-coverage.sh  validate-workflows.sh
scripts/dev/: setup-dev.sh  verify-environment.sh
scripts/doc-templates/: header-generated.md  header-manual.md
scripts/docs/: README.md  add-doc-headers-v2.py  add-doc-headers-v3.py  add-doc-headers.py  api-reference.md  check-docs-quality.py  fix-final-docs.py  generate-docs-v2.sh  generate-docs.sh  restructure-docs.py  rustdoc-to-markdown.py  update-docs-index.py
scripts/test/: test_all_examples.sh  test_examples.sh  test_examples_comprehensive.sh
scripts/utils/: badge-manager.sh  cleanup-project.sh  cleanup-root.sh  create-labels.sh  diagnose-badges.sh  fix-badges.md  fix-badges.sh  refresh-badges.sh  setup-github-labels.sh  verify-publication.sh
src/: lib.rs
src/auth/: client.rs  discovery.rs  errors.rs  mod.rs  pkce.rs  token.rs  types.rs
src/client/: builder.rs  mcp_client.rs  mod.rs  request_handler.rs  session.rs
src/core/: completion.rs  completion_handlers.rs  error.rs  health.rs  logging.rs  metrics.rs  mod.rs  prompt.rs  resource.rs  retry.rs  tool.rs  tool_discovery.rs  tool_metadata.rs  validation.rs
src/plugin/: api.rs  comprehensive_test.rs  config.rs  loader.rs  loader_test.rs  manager.rs  manager_test.rs  mod.rs  registry.rs  types.rs  watcher.rs
src/protocol/: batch.rs  discovery.rs  messages.rs  metadata.rs  methods.rs  missing_types.rs  mod.rs  roots_types.rs  schema_introspection.rs  types.rs  validation.rs
src/server/: discovery_handler.rs  handlers.rs  handlers_test.rs  http_server.rs  lifecycle.rs  mcp_server.rs  mcp_server_test.rs  mod.rs  test_types.rs
src/transport/: http.rs  http_auth.rs  http_comprehensive_final_tests.rs  http_comprehensive_tests.rs  http_convenience.rs  http_convenience_test.rs  http_edge_case_tests.rs  http_enhanced_tests.rs  http_route_handler_tests.rs  mod.rs  stdio.rs  stdio_tests.rs  streaming_http.rs  traits.rs  websocket.rs  websocket_test.rs
src/utils/: mod.rs  uri.rs
supply-chain/: config.toml
tests/: basic_test.rs  comprehensive_schema_tests.rs  core_tests.rs  discovery_tests.rs  edge_cases_and_negative_tests.rs  enhanced_schema_compliance_tests.rs  http_server_route_tests.rs  http_sse_streaming_tests.rs  initialization_fix_test.rs  integration_best_practices_complete.rs  integration_cross_transport.rs  integration_e2e_http.rs  integration_e2e_stdio.rs  integration_e2e_websocket.rs  phase3_error_handling_tests.rs  phase4_additional_edge_case_tests.rs  phase4_comprehensive_test_coverage.rs  plugin_api_tests.rs  plugin_config_tests.rs  plugin_integration_tests.rs  production_safety_tests.rs  protocol_missing_types_tests.rs  protocol_tests.rs  protocol_validation_comprehensive.rs  roots_implementation_test.rs  schema_tests.rs  server_tests.rs  test_new_features.rs  test_readme_examples.rs  transport_tests.rs
tests/plugin_fixtures/: build.sh
tests/plugin_fixtures/calc1/: Cargo.toml
tests/plugin_fixtures/calc1/src/: lib.rs
